syntax = "proto3";

option go_package = "v1";
option java_package = "stackrox.generated";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/v1/benchmark_service.proto";
import "api/v1/benchmark_results_service.proto";
import "api/v1/empty.proto";

package v1;

message BenchmarkScanMetadata {
    string                    scan_id       = 1;
    string                    benchmark_id  = 2;
    repeated string           cluster_ids   = 3;
    repeated string           checks        = 4;
    google.protobuf.Timestamp time          = 5;
    BenchmarkReason           reason        = 6;
}

message BenchmarkScan {
    string id = 1;
    message Check {
        CheckDefinition   definition         = 1;
        map<string,int32> aggregated_results = 2;
    }
    repeated Check checks = 2;
}

message HostResults {
    message HostResult {
        string          host   = 1;
        CheckStatus     result = 2;
        repeated string notes  = 3;
    }
    repeated HostResult host_results = 1;
}

message GetHostResultsRequest {
    string scan_id    = 1;
    string check_name = 2;
}

message ListBenchmarkScansRequest {
    string          benchmark_id = 1;
    repeated string cluster_ids  = 2;
}

message ListBenchmarkScansResponse {
    repeated BenchmarkScanMetadata scan_metadata = 1;
}

message GetBenchmarkScanRequest {
    string          scan_id     = 1;
    repeated string cluster_ids = 2;
    repeated string hosts       = 3;
}

message StatusCount {
    CheckStatus status = 1;
    int64       count  = 2;
}

message BenchmarkGroup {
    string               benchmark = 1;
    repeated StatusCount counts    = 2;
}

message ClusterGroup {
    string                  cluster_id   = 1;
    string                  cluster_name = 2;
    repeated BenchmarkGroup benchmarks   = 3;
}

message GetBenchmarkScansSummaryResponse {
    repeated ClusterGroup clusters = 1;
}

service BenchmarkScanService {

    rpc PostBenchmarkScan (BenchmarkScanMetadata) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/benchmarks/scans"
            body: "*"
        };
    }

    rpc ListBenchmarkScans (ListBenchmarkScansRequest) returns (ListBenchmarkScansResponse) {
        option (google.api.http) = {
            get: "/v1/benchmarks/scans"
        };
    }

    rpc GetBenchmarkScan (GetBenchmarkScanRequest) returns (BenchmarkScan) {
        option (google.api.http) = {
            get: "/v1/benchmarks/scans/{scan_id}"
        };
    }

    rpc GetHostResults (GetHostResultsRequest) returns (HostResults) {
        option (google.api.http) = {
            get: "/v1/benchmarks/scans/{scan_id}/{check_name}"
        };
    }

    rpc GetBenchmarkScansSummary (Empty) returns (GetBenchmarkScansSummaryResponse) {
        option (google.api.http) = {
            get: "/v1/benchmarks/summary/scans"
        };
    }
}
